git push heroku

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "> 0.05%"
   ],
   "scripts": {
-    "start": "postcss index.css -m --map -o index.min.css "
+    "start": "postcss index.css -m --map -o index.min.css ",
+    "heroku": "git push https://git.heroku.com/meeting-app-test.git"
   },
   "dependencies": {
     "cssnano": "^3.10.0"
