--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
+    "handlebars": "^4.0.11",
+    "handlebars-loader": "^1.7.0",
     "html-loader": "^0.5.5",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
