--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
     "html-loader": "^0.5.5",
+    "jquery": "^3.3.1",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "owl.carousel": "^2.3.4",
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.3",
     "smoothscroll-polyfill": "^0.4.3",
