--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "autoprefixer": "^8.4.1",
     "html-webpack-plugin": "^4.0.0-alpha",
     "postcss-cli": "^5.0.0",
-    "postcss-flexbugs-fixes": "^3.3.1"
+    "postcss-flexbugs-fixes": "^3.3.1",
+    "serve": "^10.0.0"
   },
   "browserslist": [
     "Firefox >= 39",
@@ -18,7 +19,7 @@
   ],
   "scripts": {
     "dev": "webpack-serve ./webpack.config.babel.js",
-    "start": "webpack --mode production",
+    "start": "webpack --mode production && serve .",
     "heroku": "webpack --mode production && git push heroku master"
   },
   "dependencies": {
