--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   ],
   "scripts": {
     "dev": "webpack-serve ./webpack.config.babel.js",
-    "start": "webpack --mode production && serve .",
-    "heroku": "webpack --mode production && git push heroku master"
+    "start": "webpack --mode production && serve ."
   },
   "dependencies": {
     "babel": "^6.23.0",
@@ -42,6 +41,7 @@
     "sass-loader": "^7.0.3",
     "smoothscroll-polyfill": "^0.4.3",
     "style-loader": "^0.21.0",
+    "swiper": "^4.3.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.12.1",
     "webpack-cli": "^3.0.8",
